--- a/ripechilliapp/templates/ripechilli/base.html
+++ b/ripechilliapp/templates/ripechilli/base.html
@@ -52,6 +52,7 @@
                 </h2>
                 <a class="closebtn" id="CloseBtnId">&times;</a>
                 <div class="container sidenavcont">
+                    <li><a href="{%url 'intern'%}">Get Internship</a></li>
                     <li><a href="{%url 'WebSamples'%}">Web Samples</a></li>
                     <li><a href="{%url 'Website'%}">Web Development</a></li>
                     <li><a href="{%url 'Logo'%}">Logo Development</a></li>
